exercicios do sabado

--- a/ex22/index.html
+++ b/ex22/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Estevam 3D Designer</h1>
+        <h1 class="cabeca">Estevam 3D Designer</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Sobre</a>
-            <a href="#">Portfólio</a>
-            <a href="#">Contato</a>
+            <a href="#" class="home">Home</a>
+            <a href="#" class="outros">Sobre</a>
+            <a href="#" class="outros">Portfólio</a>
+            <a href="#" class="outros">Contato</a>
         </nav>
     </header>
     <main>
